--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ anyio==4.11.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 bcrypt==5.0.0
+boto3==1.40.44
+botocore==1.40.44
 cffi==2.0.0
 click==8.3.0
 cryptography==46.0.1
@@ -12,20 +14,25 @@ email-validator==2.3.0
 fastapi==0.117.1
 h11==0.16.0
 idna==3.10
+jmespath==1.0.1
 neo4j==5.28.2
 neomodel==5.5.2
+passlib==1.7.4
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-multipart==0.0.20
 pytz==2025.2
 rsa==4.9.1
+s3transfer==0.14.0
 six==1.17.0
 sniffio==1.3.1
 starlette==0.48.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+urllib3==2.5.0
 uvicorn==0.37.0
-passlib[argon2]==1.7.4
