--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 pytz==2025.2
+redis==6.4.0
 rsa==4.9.1
 s3transfer==0.14.0
 six==1.17.0
@@ -36,4 +37,4 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.37.0
-redis==6.4.0
+websockets==15.0.1
