--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+-- This file is *generated* (or should be) from `requirements.in` using `pip-compile`.
+-- Edit `requirements.in` (top-level direct deps) and run `pip-compile requirements.in` to update this file.
+-- Example:
+--   pip install pip-tools
+--   pip-compile requirements.in --output-file requirements.txt
+
 annotated-types==0.7.0
 anyio==4.11.0
 argon2-cffi==25.1.0
@@ -38,3 +44,5 @@ typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.37.0
 websockets==15.0.1
+fastapi-mail==1.4.1
+aiosmtplib==2.0.2
